# yolo_ros_plugin

./: README.md
yolo_node/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
yolo_node/launch/: CNN_SUBPUB_topics.yaml  yolo.launch  yolov8.launch
yolo_node/launch/yolo/: yolov4.cfg
yolo_node/plugins/: nodelets.xml
yolo_node/scripts/: startup.py
yolo_node/scripts/utils/: mainserver.py
yolo_node/src/: RosTopicConfigs.cpp  yolo.cpp
yolo_node/src/include/: RosTopicConfigs.h  yolo.h
